fix text truncation

--- a/playlist/playlist.css
+++ b/playlist/playlist.css
@@ -176,6 +176,28 @@ video {
   }
 }
 
+.request-title {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+.requested-by {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+}
+
+#nowPlaying {
+  max-width: 800px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+}
+
 .delete-request {
   cursor: pointer;
   float: inline-end;
